tests/golden/type_errors/literal_pattern_payload_mismatch.cd
enum Box { Value(number), Empty }
let value = Box.Value(1);
match value {
  Box.Value("wrong") => { print 1; }
  Box.Empty => { print 0; }
}
