tests/golden/type_errors/literal_pattern_payload_mismatch.err
Type error at 4:13: literal pattern expects number, got string
    Box.Value("wrong") => { print 1; }
              ^
